Adding all methods
