# src/main/resources/neko-echo-api.openapi.yml
@@ -59,6 +59,101 @@ paths:
             "application/json":
               schema:
                 $ref: "#/components/schemas/EchoResponse"
+    put:
+      tags:
+        - echos
+      summary: Put echo response
+      operationId: putBy
+      parameters:
+        - $ref: "#/components/parameters/path"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/HashMapObject"
+      responses:
+        "200":
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/schemas/EchoResponse"
+        "default":
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/schemas/EchoResponse"
+
+    patch:
+      tags:
+        - echos
+      summary: Patch echo response
+      operationId: patchBy
+      parameters:
+        - $ref: "#/components/parameters/path"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/HashMapObject"
+      responses:
+        "200":
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/schemas/EchoResponse"
+        "default":
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/schemas/EchoResponse"
+
+    delete:
+      tags:
+        - echos
+      summary: Delete echo response
+      operationId: deleteBy
+      parameters:
+        - $ref: "#/components/parameters/path"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/HashMapObject"
+      responses:
+        "200":
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/schemas/EchoResponse"
+        "default":
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/schemas/EchoResponse"
+
+    options:
+      tags:
+        - echos
+      summary: Options echo response
+      operationId: optionsBy
+      parameters:
+        - $ref: "#/components/parameters/path"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/HashMapObject"
+      responses:
+        "200":
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/schemas/EchoResponse"
+        "default":
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/schemas/EchoResponse"
 
 components:
   parameters:
@@ -68,8 +163,6 @@ components:
       schema:
         type: string
         minLength: 1
-
-  responses:
 
   schemas:
     HashMapObject:
